--- a/src/app/shared/components/login/login.component.html
+++ b/src/app/shared/components/login/login.component.html
@@ -6,39 +6,78 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-10 col-xl-7 mx-auto">
-                            <h3 class="display-4 color-titles">{{strTitle}}</h3>
+                            <h3 class="display-4 color-titles">{{ strTitle }}</h3>
                             <form autocomplete="off" [formGroup]="formLogin" (ngSubmit)="ingresar()">
                                 <div class="form-group mb-3">
-                                    <input id="inputEmail" type="email" placeholder="Número de identificación" required="" class="form-control rounded-pill border-0 shadow-sm px-4" [class.is-invalid]="nIdentificacionNoValido" formControlName="nIdentificacion">
+                                    <input id="inputEmail" type="email" placeholder="Número de identificación" required="" class="form-control rounded-pill border-0 shadow-sm px-4" [class.is-invalid]="nIdentificacionNoValido" formControlName="nIdentificacion" />
                                     <div class="text-left">
-                                        <small *ngIf="nIdentificacionNoValido" class="text-danger ">Ingrese un número de identificación</small>
-                                    </div>
-                                </div>
-
-                                <div class="form-group mb-3">
-                                    <input id="inputPassword" type="password" placeholder="Contraseña" required="" class="form-control rounded-pill border-0 shadow-sm px-4 " name="password" formControlName="password" [class.is-invalid]="passNoValido">
-                                    <div class="text-left">
-                                        <small *ngIf="passNoValido" class="text-danger ">Ingrese una contraseña</small>
-                                    </div>
-                                </div>
-                                <div class="custom-control custom-checkbox mb-3">
-                                    <input id="customCheck1" type="checkbox" checked class="custom-control-input">
-                                    <label for="customCheck1" class="custom-control-label">Recordar contraseña</label>
-                                </div>
-                                <button type="submit" [disabled]="formLogin.invalid" class="btn bg-main text-white btn-block text-uppercase mb-2 rounded-pill shadow-sm">Ingresar</button>
-                                <div class="text-center d-flex justify-content-between mt-4">
-                                    <p routerLink="/registerDoctor">
-                                        <a class="font-italic text-muted link">Registrarse como doctor</a>
-                                    </p>
-                                    <p routerLink="/registerPatient"> <a class="font-italic text-muted link">Registrarse como paciente</a>
-
-                                    </p>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
+                                        <small *ngIf="nIdentificacionNoValido" class="text-danger">Ingrese un número de identificación</small
+                    >
+                  </div>
                 </div>
+
+                <div class="form-group mb-3">
+                  <input
+                    id="inputPassword"
+                    type="password"
+                    placeholder="Contraseña"
+                    required=""
+                    class="form-control rounded-pill border-0 shadow-sm px-4"
+                    name="password"
+                    formControlName="password"
+                    [class.is-invalid]="passNoValido"
+                  />
+                  <div class="text-left">
+                    <small *ngIf="passNoValido" class="text-danger"
+                      >Ingrese una contraseña</small
+                    >
+                  </div>
+                </div>
+                <div class="custom-control custom-checkbox mb-3">
+                  <input
+                    id="customCheck1"
+                    type="checkbox"
+                    checked
+                    class="custom-control-input"
+                  />
+                  <label for="customCheck1" class="custom-control-label"
+                    >Recordar contraseña</label
+                  >
+                </div>
+                <button
+                  type="submit"
+                  [disabled]="formLogin.invalid"
+                  class="btn bg-main text-white btn-block text-uppercase mb-2 rounded-pill shadow-sm"
+                >
+                  Ingresar
+                </button>
+                <div class="text-center d-flex justify-content-between mt-4">
+                  <p routerLink="/registerDoctor">
+                    <a class="font-italic text-muted link"
+                      >Registrarse como doctor</a
+                    >
+                  </p>
+                  <p routerLink="/registerPatient">
+                    <a class="font-italic text-muted link"
+                      >Registrarse como paciente</a
+                    >
+                  </p>
+                </div>
+                <div class="text-center justify-content-between">
+                  <p>
+                    ¿Olvidó su contraseña? 
+                    <a
+                      class="font-italic text-muted link"
+                      (click)="openModalRestorePassword()"
+                      >Reestrablecer contraseña</a
+                    >
+                  </p>
+                </div>
+              </form>
             </div>
+          </div>
         </div>
+      </div>
     </div>
+  </div>
 </div>
