--- a/src/app/shared/components/restore-password/restore-password.component.html
+++ b/src/app/shared/components/restore-password/restore-password.component.html
@@ -1,41 +1,29 @@
-<body class="d-flex justify-content-center ">
-    <div class="container align-self-center">
-        <div class="card text-center">
-            <div class="card-header">
-                <h1 class="text-center mb-2">{{title}}</h1>
-
-            </div>
-            <div class="card-body">
-                <form>
-                    <div class="row">
-                        <div class="offset-lg-4 offset-xl-4"></div>
-                        <label class="col-auto">Correo</label>
-                    </div>
-                    <div class="row form-group">
-                        <div class="offset-4"></div>
-                        <div class="col-12 col-lg-4 col-xl-4">
-                            <input class="form-control" type="text" placeholder="Correo" name="email">
-                        </div>
-                    </div>
-                    <div class="row form-group">
-                        <div class="offset-lg-4 offset-xl-4"></div>
-                        <div class="input-group col-md-4">
-                            <button type="submit" class="btn bg-main btn-block text-white">
-                                Recuperar
-                            </button>
-                        </div>
-                    </div>
-                </form>
-            </div>
-            <div class="card-footer text-muted ">
-                <div class="form-group row mb-0">
-                    <div class=" offset-lg-4 offset-xl-4"></div>
-                    <div class="input-group col-md-4">
-                        <a class="btn btn-block" routerLink="/login">Ingresar</a>
-                    </div>
-
+<div class="container align-self-center">
+    <div class="card text-center">
+        <div class="card-header">
+            <h1 class="text-center mb-2">{{ title }}</h1>
+        </div>
+        <div class="card-body">
+            <form [formGroup]="formRestore" (ngSubmit)="restore()">
+                <div class="row">
+                    <div class="offset-lg-4 offset-xl-4"></div>
+                    <label class="col-auto">Correo</label>
                 </div>
-            </div>
+                <div class="row form-group">
+                    <div class="offset-4"></div>
+                    <div class="col-12 col-lg-4 col-xl-4">
+                        <input class="form-control" type="text" placeholder="Correo" name="email" formControlName="correo" />
+                    </div>
+                </div>
+                <div class="row form-group">
+                    <div class="offset-lg-4 offset-xl-4"></div>
+                    <div class="input-group col-md-4">
+                        <button type="submit" [disabled]="formRestore.invalid" class="btn bg-main btn-block text-white">
+              Recuperar
+            </button>
+                    </div>
+                </div>
+            </form>
         </div>
     </div>
-</body>
+</div>
