--- a/src/app/admin/components/doctor-admin/doctor-admin.component.html
+++ b/src/app/admin/components/doctor-admin/doctor-admin.component.html
@@ -2,13 +2,13 @@
     <h1 class="text-center">{{ strTitle }}</h1>
     <div class="form-group row">
         <button class="btn bg-main ml-3 text-white" (click)="findAll()">
-            <i class="fas fa-users"></i> Mostrar todos
+      <i class="fas fa-users"></i> Mostrar todos
     </button>
-        <button class="btn btn-secondary ml-3" (click)="findById(identificacion)">
-      <i class="fas fa-search"></i> Buscar
+        <button class="btn btn-secondary ml-3" (click)="findAll()">
+      <i class="fas fa-redo-alt"></i>Actualizar
     </button>
         <div class="col">
-            <input class="form-control" type="text" placeholder="Buscar por id" [(ngModel)]="identificacion" (keyup.enter)="findById(identificacion)" />
+            <input class="form-control" type="text" placeholder="Buscar por identificacion" [(ngModel)]="identificacion" (keyup)="findByIdentificacion(identificacion)" />
         </div>
     </div>
     <hr class="" />
@@ -27,7 +27,11 @@
             </tr>
         </thead>
         <tbody>
-            <tr *ngFor="let d of doctors| paginate: { itemsPerPage: 5, currentPage: pageActual} ; let i = index">
+            <tr *ngFor="
+          let d of doctors
+            | paginate: { itemsPerPage: 5, currentPage: pageActual };
+          let i = index
+        ">
                 <td>{{ d.doctorId }}</td>
                 <td>{{ d.firstName + " " + d.lastName + " " + d.lastName2 }}</td>
                 <td>{{ getFormattedDate(d.birthday) | date }}</td>
@@ -53,8 +57,7 @@
             </tr>
         </tbody>
     </table>
-    <pagination-controls class="text-center " (pageChange)="pageActual=$event"></pagination-controls>
-
+    <pagination-controls class="text-center" (pageChange)="pageActual = $event"></pagination-controls>
 </div>
 <ng-template #contenido let-modal>
     <div class="modal-header">
