--- a/src/app/admin/components/entidades-admin/entidades-admin.component.html
+++ b/src/app/admin/components/entidades-admin/entidades-admin.component.html
@@ -2,13 +2,13 @@
     <h1 class="text-center">{{ strTitle }}</h1>
     <div class="form-group row">
         <button class="btn bg-main ml-3 text-white" (click)="findAll()">
-            <i class="fas fa-heartbeat"></i> Mostrar todos
+      <i class="fas fa-heartbeat"></i> Mostrar todos
     </button>
-        <button class="btn btn-secondary ml-3" (click)="findById(id)">
-      <i class="fas fa-search"></i> Buscar
+        <button class="btn btn-secondary ml-3" (click)="findAll()">
+      <i class="fas fa-redo-alt"></i>Actualizar
     </button>
         <div class="col">
-            <input class="form-control" type="text" placeholder="Buscar por id" [(ngModel)]="id" (keyup.enter)="findById(id)" />
+            <input class="form-control" type="text" placeholder="Buscar por nombre" [(ngModel)]="nombre" (keyup)="findByNombre(nombre)" />
         </div>
     </div>
     <hr class="" />
@@ -23,10 +23,13 @@
             </tr>
         </thead>
         <tbody>
-            <tr *ngFor="let e of eps| paginate: { itemsPerPage: 5, currentPage: pageActual} ; let i = index">
-                <td>{{i+1}}</td>
-                <td>{{e.epsName}}</td>
-                <td>{{e.state | state}}</td>
+            <tr *ngFor="
+          let e of eps | paginate: { itemsPerPage: 5, currentPage: pageActual };
+          let i = index
+        ">
+                <td>{{ e.epsId }}</td>
+                <td>{{ e.epsName }}</td>
+                <td>{{ e.state | state }}</td>
                 <td>
                     <button class="btn bg-main btn-editar text-white" (click)="openCentrado(contenido, e)">
             <i class="fas fa-user-edit"></i>
@@ -45,7 +48,7 @@
             </tr>
         </tbody>
     </table>
-    <pagination-controls class="text-center " (pageChange)="pageActual=$event"></pagination-controls>
+    <pagination-controls class="text-center" (pageChange)="pageActual = $event"></pagination-controls>
 </div>
 <ng-template #contenido let-modal>
     <div class="modal-header">
