--- a/src/app/admin/components/patient-admin/patient-admin.component.html
+++ b/src/app/admin/components/patient-admin/patient-admin.component.html
@@ -8,7 +8,7 @@
             <i class="fas fa-redo-alt"></i>Actualizar
     </button>
         <div class="col">
-            <input class="form-control" type="text" placeholder="Buscar por id" [(ngModel)]="identificacion" (keyup)="findByIdentificacion(identificacion)" />
+            <input class="form-control" type="text" placeholder="Buscar por identificacion" [(ngModel)]="identificacion" (keyup)="findByIdentificacion(identificacion)" />
         </div>
     </div>
     <hr class="" />
