--- a/src/app/admin/components/products-admin/products-admin.component.html
+++ b/src/app/admin/components/products-admin/products-admin.component.html
@@ -2,13 +2,13 @@
     <h1 class="text-center">{{ strTitle }}</h1>
     <div class="form-group row">
         <button class="btn bg-main ml-3 text-white" (click)="findAll()">
-            <i class="fas fa-capsules"></i> Mostrar todos
+      <i class="fas fa-capsules"></i> Mostrar todos
     </button>
-        <button class="btn btn-secondary ml-3" (click)="findById(id)">
-      <i class="fas fa-search"></i> Buscar
+        <button class="btn btn-secondary ml-3" (click)="findAll()">
+      <i class="fas fa-redo-alt"></i>Actualizar
     </button>
         <div class="col">
-            <input class="form-control" type="text" placeholder="Buscar por id" [(ngModel)]="id" (keyup.enter)="findById(id)" />
+            <input class="form-control" type="text" placeholder="Buscar por nombre" [(ngModel)]="nombre" (keyup)="findByNombre(nombre)" />
         </div>
     </div>
     <hr class="" />
@@ -32,7 +32,7 @@
                 <td>{{ i + 1 }}</td>
                 <td>{{ p.name }}</td>
                 <td>{{ p.description }}</td>
-                <td>{{ p.state | state}}</td>
+                <td>{{ p.state | state }}</td>
                 <td>
                     <a target="_blank" [href]="p.url">{{ p.url }}</a>
                 </td>
