--- a/src/app/patient/components/products-patient/products-patient.component.html
+++ b/src/app/patient/components/products-patient/products-patient.component.html
@@ -10,7 +10,7 @@
 
                 <div class="form-row">
                     <div class="form-group col-md-12">
-                        <a [href]="product.url" target="_blank"><button type="button" class="btn btn-primary btn-block">
+                        <a [href]="product.url" target="_blank"><button type="button" class="btn sc-button btn-block">
                 <i class="fas fa-cart-plus" style="color: white"></i> Comprar</button
             ></a>
                     </div>
