--- a/src/app/patient/components/citas-patient/citas-patient.component.html
+++ b/src/app/patient/components/citas-patient/citas-patient.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" *ngIf="citas?.length > 0">
     <h2 class="text-center mb-5">{{ strTitle }}</h2>
     <div class="row">
         <div class="col-md-4 mb-3" *ngFor="let c of citas">
@@ -15,47 +15,96 @@
         </div>
     </div>
 </div>
-
+<div class="d-flex align-items-center justify-content-center vh-100" *ngIf="citas?.length === 0">
+    <div class="text-center">
+        <h1 class="display-1 fw-bold">Sin citas médicas</h1>
+        <p class="fs-3">
+            <span class="text-danger">Opps!</span> No tienes ningún historial de citas.
+        </p>
+        <p class="lead">¿Deseas adquirir un servicio?.</p>
+        <a routerLink="/patient-principal/servicios-medicos" class="btn sc-button">Adquirir</a
+    >
+  </div>
+</div>
 <ng-template #contenido let-modal>
-    <div class="modal-header">
-        <h4 class="modal-title">Detalles de la cita</h4>
-        <button class="close" aria-label="close" type="button" (click)="modal.dismiss()">
+  <div class="modal-header">
+    <h4 class="modal-title">Detalles de la cita</h4>
+    <button
+      class="close"
+      aria-label="close"
+      type="button"
+      (click)="modal.dismiss()"
+    >
       <span aria-hidden="true">&times;</span>
     </button>
+  </div>
+  <div class="modal-body">
+    <div class="form-row">
+      <div class="form-group col-md-12">
+        <label for="descripcion">Descripción</label>
+        <textarea
+          class="form-control"
+          id="descripcion"
+          readonly
+          [ngModel]="citaModal.description"
+        ></textarea>
+      </div>
     </div>
-    <div class="modal-body">
-        <div class="form-row">
-            <div class="form-group col-md-12">
-                <label for="descripcion">Descripción</label>
-                <textarea class="form-control" id="descripcion" readonly [ngModel]="citaModal.description"></textarea>
-            </div>
-        </div>
-        <div class="form-row">
-            <div class="form-group col-md-6">
-                <label for="motivo">Motivo</label>
-                <input type="text" class="form-control" id="motivo" readonly [ngModel]="citaModal.reason" />
-            </div>
-            <div class="form-group col-md-6">
-                <label for="fecha">Fecha</label>
-                <input type="text" class="form-control" id="fecha" readonly [ngModel]="citaModal.date | date" />
-            </div>
-        </div>
-        <div class="form-row">
-            <div class="form-group col-md-6">
-                <label for="doctor">Doctor</label>
-                <input type="text" class="form-control" id="doctor" readonly [ngModel]="citaModal.firstName + ' ' + citaModal.lastName" />
-            </div>
-            <div class="form-group col-md-6">
-                <label for="costo">Costo</label>
-                <input type="text" class="form-control" id="costo" readonly [ngModel]="citaModal.price | currency: 'COP '" />
-            </div>
-        </div>
-        <div class="row">
-            <div class="form-group col-md-12">
-                <button class="btn bg-main text-white btn-block" type="button" [disabled]="citaModal.state === 'A'" (click)="generarPdfCita(citaModal.appointmentId)">
+    <div class="form-row">
+      <div class="form-group col-md-6">
+        <label for="motivo">Motivo</label>
+        <input
+          type="text"
+          class="form-control"
+          id="motivo"
+          readonly
+          [ngModel]="citaModal.reason"
+        />
+      </div>
+      <div class="form-group col-md-6">
+        <label for="fecha">Fecha</label>
+        <input
+          type="text"
+          class="form-control"
+          id="fecha"
+          readonly
+          [ngModel]="citaModal.date | date"
+        />
+      </div>
+    </div>
+    <div class="form-row">
+      <div class="form-group col-md-6">
+        <label for="doctor">Doctor</label>
+        <input
+          type="text"
+          class="form-control"
+          id="doctor"
+          readonly
+          [ngModel]="citaModal.firstName + ' ' + citaModal.lastName"
+        />
+      </div>
+      <div class="form-group col-md-6">
+        <label for="costo">Costo</label>
+        <input
+          type="text"
+          class="form-control"
+          id="costo"
+          readonly
+          [ngModel]="citaModal.price | currency: 'COP '"
+        />
+      </div>
+    </div>
+    <div class="row">
+      <div class="form-group col-md-12">
+        <button
+          class="btn bg-main text-white btn-block"
+          type="button"
+          [disabled]="citaModal.state === 'A'"
+          (click)="generarPdfCita(citaModal.appointmentId)"
+        >
           Descargar reporte
         </button>
-            </div>
-        </div>
+      </div>
     </div>
+  </div>
 </ng-template>
