--- a/src/app/shared/components/chat-content/chat-content.component.html
+++ b/src/app/shared/components/chat-content/chat-content.component.html
@@ -23,10 +23,10 @@
     </ul>
     <div class="form-group row">
         <div class="col-sm-10">
-            <textarea [(ngModel)]="newMessage" class="form-control sc-text-area" placeholder="Escriba un mensaje..."></textarea>
+            <textarea [(ngModel)]="newMessage" (keyup.enter)="sendMsg()" class="form-control sc-text-area" placeholder="Escriba un mensaje..."></textarea>
         </div>
         <div class="col-sm-2 sc-button-send">
-            <button type="button" (click)="sendMsg()" class="btn btn-block sc-button">
+            <button type="button" [disabled]="newMessage?.length === 0 || !newMessage" (click)="sendMsg()" class="btn btn-block sc-button">
         Enviar
       </button>
         </div>
