--- a/src/app/patient/components/servicios-medicos-patient/servicios-medicos-patient.component.css
+++ b/src/app/patient/components/servicios-medicos-patient/servicios-medicos-patient.component.css
@@ -31,3 +31,16 @@ a:hover {
     width: 100%;
     max-height: 190px;
 }
+
+.fa-instagram {
+    font-size: 20px;
+    color: transparent;
+    background: radial-gradient( circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285aeb 90%);
+    background: -webkit-radial-gradient( circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285aeb 90%);
+    background-clip: text;
+    -webkit-background-clip: text;
+}
+
+.disabled-link {
+    pointer-events: none;
+}
