--- a/src/app/doctor/components/settings-doctor/settings-doctor.component.html
+++ b/src/app/doctor/components/settings-doctor/settings-doctor.component.html
@@ -48,6 +48,24 @@
             <div class="col-xl-10 form-group">
                 <input type="text" class="form-control" #precio formControlName="{{ 'precio' }}" />
             </div>
+            <div class="col-xl-2 form-group">
+                <label class="col-form-label" for="">Facebook :</label>
+            </div>
+            <div class="col-xl-10 form-group">
+                <input type="text" class="form-control" #precio formControlName="{{ 'facebookUrl' }}" />
+            </div>
+            <div class="col-xl-2 form-group">
+                <label class="col-form-label" for="">Instagram :</label>
+            </div>
+            <div class="col-xl-10 form-group">
+                <input type="text" class="form-control" #precio formControlName="{{ 'instagramUrl' }}" />
+            </div>
+            <div class="col-xl-2 form-group">
+                <label class="col-form-label" for="">Twitter :</label>
+            </div>
+            <div class="col-xl-10 form-group">
+                <input type="text" class="form-control" #precio formControlName="{{ 'twitterUrl' }}" />
+            </div>
         </div>
         <hr />
         <div class="row">
