--- a/src/app/doctor/components/settings-doctor/settings-doctor.component.html
+++ b/src/app/doctor/components/settings-doctor/settings-doctor.component.html
@@ -52,19 +52,19 @@
                 <label class="col-form-label" for="">Facebook :</label>
             </div>
             <div class="col-xl-10 form-group">
-                <input type="text" class="form-control" #precio formControlName="{{ 'facebookUrl' }}" />
+                <input type="text" class="form-control" #facebookUrl formControlName="{{ 'facebookUrl' }}" />
             </div>
             <div class="col-xl-2 form-group">
                 <label class="col-form-label" for="">Instagram :</label>
             </div>
             <div class="col-xl-10 form-group">
-                <input type="text" class="form-control" #precio formControlName="{{ 'instagramUrl' }}" />
+                <input type="text" class="form-control" #instagramUrl formControlName="{{ 'instagramUrl' }}" />
             </div>
             <div class="col-xl-2 form-group">
                 <label class="col-form-label" for="">Twitter :</label>
             </div>
             <div class="col-xl-10 form-group">
-                <input type="text" class="form-control" #precio formControlName="{{ 'twitterUrl' }}" />
+                <input type="text" class="form-control" #twitterUrl formControlName="{{ 'twitterUrl' }}" />
             </div>
         </div>
         <hr />
